added secrets.properties and other issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Innoventes</string>
+    <string name="app_name">Movie db</string>
     <string name="search_here">search here...</string>
 </resources>
